2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Handled theoretical null ref exception (But
	I wasn't able to produce a test case). 

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 466694 - Generic type parameters
	missing from completion".

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 466692 - Missing
	completion for return/break keywords after yield'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: fixed 'Bug 466337 - Incorrect intelisense for
	class attribute'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 466329 - Autocomplete
	doesn't activate with "_"".

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: worked on csharpambience markup.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 466149 - Code completion
	activates inside a string.'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added global keyword. Fixing 'Bug 466063 - Missing keyword
	'global' from code completion'.

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/MemberCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: Performance optimizations in
	AddCompletionData. Reduce calls to Ambience.GetString.

	* Gui/CSharpAmbience.cs: Optimizations. In Visit(IType), avoid creating
	a StringBuilder when the result is just the class name.

2009-01-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Track api changes.

2009-01-09  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs:
	* Gui/NRefactoryResolver.cs:
	* Parser/NRefactoryParser.cs:
	* Parser/FindMemberAstVisitor.cs: Worked on refactoring code/fixing Bug
	456576 - refactor: rename field is not working.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>