@@ -1,3 +1,10 @@
+2009-01-20  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryResolver.cs:
+	* Parser/NRefactoryParser.cs: Added support for explicit events. Fixing
+	bug "Bug 467507 - No completion of base members inside explicit
+	events".
+
 2009-01-16  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/NRefactoryResolver.cs: Handled theoretical null ref exception (But
